src/test/ui/span/issue-29595.stderr
error[E0277]: the trait bound `u8: Tr` is not satisfied
  --> $DIR/issue-29595.rs:18:17
   |
18 |     let a: u8 = Tr::C; //~ ERROR the trait bound `u8: Tr` is not satisfied
   |                 ^^^^^ the trait `Tr` is not implemented for `u8`
   |
   = note: required by `Tr::C`

error: aborting due to previous error

